# CrossTerm

./: .claude.md  .gitignore  GAP-ANALYSIS.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC-CROSSTERM-001.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.claude/: settings.json
.github/: copilot-instructions.md  dev-guidelines.md
.github/workflows/: ci.yml  release.yml
build-scripts/: android-build.sh  apk-size-check.sh  com.crossterm.CrossTerm.yml  flatpak-build.sh  linux-desktop-integration.sh  locale-package.sh  windows-shell-extension.reg
docs/: ARCHITECTURE.md  CODING-STANDARDS.md  DESIGN.md  ENGINEERING_PLAN.md  QA.md  ROADMAP.md  THREAT_MODEL_VAULT.md  V1.2_MANUAL_STEPS.md  mkdocs.yml
docs/help/: credential-vault.md  customization.md  getting-started.md  index.md  installation.md  keyboard-shortcuts.md  network-explorer.md  plugin-api-guide.md  rdp-protocol-reference.md  security-guide.md  serial-protocol-reference.md  settings.md  sftp-file-transfer.md  ssh-connections.md  ssh-protocol-reference.md  troubleshooting.md  vnc-protocol-reference.md
e2e/: accessibility.spec.ts  command-palette.spec.ts  help-system.spec.ts  notifications.spec.ts  port-forwarding.spec.ts  responsive.spec.ts  session-management.spec.ts  settings-theme.spec.ts  sftp.spec.ts  storage-state.json  tab-and-pane.spec.ts  terminal.spec.ts  vault.spec.ts
icons/: crossterm.desktop  icon.icns
integrations/raycast/: package.json
integrations/vscode/: package.json
packaging/homebrew/: crossterm.rb
scripts/: build-helpbook.sh  cargo-audit.sh  check-plaintext-leaks.sh  generate-icons.sh  run-integration-tests.sh  security-audit.sh  validate-help.mjs
scripts/shell-integration/: crossterm.bash  crossterm.fish  crossterm.zsh
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/benches/: vault_bench.rs
src-tauri/fuzz/: Cargo.toml
src-tauri/fuzz/fuzz_targets/: fuzz_credential_data.rs  fuzz_session_json.rs  fuzz_ssh_auth.rs  fuzz_vault_unlock.rs
src-tauri/resources/: wifi-scan  wifi-scan.swift
src-tauri/src/: error.rs  lib.rs  main.rs  startup.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/android/: mod.rs
src-tauri/src/audit/: mod.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/cloud/: aws.rs  azure.rs  gcp.rs  mod.rs
src-tauri/src/config/: mdm.rs  mod.rs  policy.rs
src-tauri/src/editor/: mod.rs
src-tauri/src/ftp/: mod.rs
src-tauri/src/importer/: bundle.rs  mod.rs
src-tauri/src/keygen/: mod.rs
src-tauri/src/keymgr/: mod.rs
src-tauri/src/l10n/: mod.rs
src-tauri/src/macros/: mod.rs
src-tauri/src/network/: mod.rs
src-tauri/src/notifications/: mod.rs
src-tauri/src/plugin_rt/: mod.rs
src-tauri/src/rbac/: mod.rs
src-tauri/src/rdp/: mod.rs
src-tauri/src/recording/: mod.rs
src-tauri/src/security/: mod.rs
src-tauri/src/serial/: mod.rs
src-tauri/src/sftp/: mod.rs
src-tauri/src/snippets/: mod.rs
src-tauri/src/ssh/: connection.rs  forwarding.rs  health.rs  keygen.rs  mod.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/team/: mod.rs
src-tauri/src/telnet/: mod.rs
src-tauri/src/terminal/: mod.rs
src-tauri/src/vault/: biometric.rs  crypto.rs  fido2.rs  mod.rs  os_store.rs  shared.rs  totp.rs
src-tauri/src/vnc/: mod.rs
src-tauri/src/window/: mod.rs
src-tauri/tests/: integration_ssh.rs
src/hooks/: useBreakpoint.ts
src/i18n/: ar.json  de.json  en.json  es.json  fr.json  he.json  index.ts  ja.json  zh.json
src/stores/: appStore.ts  featureFlagsStore.ts  sessionStore.ts  terminalStore.ts  vaultStore.ts
src/styles/: rtl.css
src/test/: setup.ts
src/themes/: dark.json  dracula.json  high-contrast.json  light.json  monokai-pro.json  nord.json  solarized-dark.json  solarized-light.json  tokens.json
src/types/: index.ts
src/utils/: errorMessages.ts  formatters.ts
test-results/accessibility-Accessibilit-4b608-ents-reachable-via-keyboard/: error-context.md
test-results/command-palette-Command-Pa-e5400-cutes-toggle-sidebar-action/: error-context.md
test-results/help-system-Help-System-E2-21aa8-l-persists-font-size-change/: error-context.md
tests/: docker-compose.yml
tests/fixtures/: README.md  motd  setup-motd.sh  test-ssh-config
(+138 files in other folders)
