[package]
name = "crossterm-app"
version = "0.1.0"
description = "CrossTerm - Cross-Platform Terminal Emulator & Remote Access Suite"
authors = ["CrossTerm Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/crossterm/crossterm"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Cryptography
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# SSH
russh = "0.45"
russh-keys = "0.45"
russh-sftp = "2"
async-trait = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
data-encoding = "2"
regex = "1"

# Terminal
portable-pty = "0.8"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
