[package]
name = "crossterm-app"
version = "0.3.0"
description = "CrossTerm - Cross-Platform Terminal Emulator & Remote Access Suite"
authors = ["Abhishek Lal"]
license = "AGPL-3.0-only"
repository = "https://github.com/alal76/CrossTerm"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Cryptography
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# SSH
russh = "0.45"
russh-keys = "0.45"
russh-sftp = "2"
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "p256", "rand_core", "std"] }
async-trait = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
data-encoding = "2"
regex = "1"
totp-rs = { version = "6", features = ["gen_secret", "otpauth"] }

# Terminal
portable-pty = "0.8"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5"

# VNC
vnc-rs = "0.5.3"

# RDP
ironrdp = { version = "0.14", features = ["connector", "session", "graphics", "pdu"] }
ironrdp-blocking = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std"] }

# OS Credential Store
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# System
libc = "0.2"
if-addrs = "0.13"

# Clipboard
arboard = "3"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vault_bench"
harness = false

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
integration = []
